added iemocap data

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,12 @@ verify_ssl = true
 [packages]
 torchaudio = "*"
 torch = "*"
+scipy = "*"
+librosa = "*"
+pytorch-lightning = "*"
+pandas = "*"
+ipykernel = "*"
+matplotlib = "*"
 
 [requires]
 python_version = "3.7"
