refactored attention network

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,4 @@
 {
+    "editor.emptySelectionClipboard": false,
+    "python.pythonPath": "/home/nakata/.local/share/virtualenvs/ser-pytorch-ZXGm-0lL/bin/python"
 }
